Cambios
5 de Junio
- Se agregó la calculadora de matrices en las calculadoras

6 de Junio 
- Se ha agregado un temporizador a la seccion de herramientas
- Se ha creado una función "borrarConsola" que permite compatibilidad en otras plataformas
diferentes a Windows